cmake_minimum_required(VERSION 3.23)
project(Code)

set(CMAKE_CXX_STANDARD 11)

add_executable(1q1.cpp "Tutorial Sheet 1/q1.cpp")
add_executable(1q2.cpp "Tutorial Sheet 1/q2.cpp")
add_executable(1q3.cpp "Tutorial Sheet 1/q3.cpp")
add_executable(1q4.cpp "Tutorial Sheet 1/q4.cpp")
add_executable(1q5.cpp "Tutorial Sheet 1/q5.cpp")
add_executable(1q6.cpp "Tutorial Sheet 1/q6.cpp")
add_executable(1q7.cpp "Tutorial Sheet 1/q7.cpp")
add_executable(1q8.cpp "Tutorial Sheet 1/q8.cpp")
add_executable(1q10.cpp "Tutorial Sheet 1/q10.cpp")
add_executable(1q11.cpp "Tutorial Sheet 1/q11.cpp")
add_executable(1q12.cpp "Tutorial Sheet 1/q12.cpp")


